# machine-learning-training-pipeline

./: .pre-commit-config.yaml  main.py  pyproject.toml
app/core/: dataframe_utils.py  metric_utils.py
app/core/model_hyperparams/: xgboost_model_hyperparams.py
app/pipelines/pima-indians/workflows/: basic_workflow.py
