[tool.poetry]
name = "machine-learning-training-pipeline"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = "2.10.4"
pandas = "2.2.3"
scikit-learn = "1.6.0"
flytekit = "1.14.2"
mlflow = "2.19.0"
xgboost = "2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
